# anime1-desktop

./: .coverage  .dockerignore  .gitattributes  .gitignore  AGENTS.md  Anime1  BUILD.md  BUILD_CHECKLIST.md  CHANGELOG.md  DEPENDENCIES.md  DEVELOPMENT.md  Dockerfile  E2E_TEST_REPORT.md  LLM_DEVELOPMENT_GUIDE.md  Makefile  QUICKREF.md  README.md  RELEASE_SETUP_SUMMARY.md  STATUS.md  TECH_SPEC.md  TODO.md  UTPUTLOG  activate_serena.sh  anime1-covers.md  anime1_data.json  build.py  check_logs.py  check_version.py  check_zip.py  cleanup.py  cleanup_all.py  coverage.xml  debug_github.py  debug_platform.py  distInfo.plist  docker-compose.yml  docker-entrypoint.sh  e2e-full-test.js  e2e-test-cdp.js  e2e-test-template.js  (+46 more)
.claude/: settings.local.json
.serena/: project.yml
assets/: README.md
docs/: BETTER_SOLUTION.md  CICD.md  DOCKER.md  E2E_UPDATE_TEST_REPORT.md  ELECTRON_REFACTOR_TECH_SPEC.md  ELECTRON_REFACTOR_TODO.md  FEATURES.md  FUNCTION_COMPARISON.md  GITHUB_ACTIONS_TESTING.md  NODE_VERSION_EXPLAIN.md  SETUP.md  SQLITE_ALTERNATIVES.md  TASK_1_1_TYPES.md  TASK_BREAKDOWN.md  UPDATER_MOCK_SUMMARY.md  UPDATER_TESTING.md  UPDATER_TESTING_QUICKREF.md  WORKTREE_GUIDE.md
e2e/: README.md  check-env.ts  global-setup.ts  global-teardown.ts  package.json  playwright.config.js  playwright.desktop.config.js  setup.js  video-playback.spec.ts
e2e-report/: index.html
frontend/: .eslintrc.cjs  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
homebrew/: README.md  anime1.rb
hooks/: hook-beautifulsoup4.py  hook-peewee.py  hook-pywebview.py
resources/: icon.icns
scripts/: README.md  TEST_LOCAL_BUILD.md  __init__.py  build.py  build.sh  cleanup_unicode.py  create_dmg.py  create_installer.nsi  create_windows_installer.py  debug-template.js  dev.py  dev.sh  extract_changelog.py  extract_changelog.sh  extract_version.sh  fix_signature.py  fix_signature.sh  generate-icon.cjs  generate_icon.py  generate_icons.py  get_build_version.sh  inject-vite-assets.py  prepare_artifacts.py  prepare_release_assets.py  quick-fix.sh  setup-secrets.sh  sign_app.py  test-api-data.cjs  test-bangumi-cover.cjs  test-cache-read.cjs  test-cover-url.cjs  test-db-read.cjs  test-detail-debug.cjs  test-detail-playback.cjs  test-detail-structure.cjs  test-detail-with-logs.cjs  test-electron.cjs  test-fetch.cjs  test-full-flow.cjs  test-full-playback.cjs  (+18 more)
skills/: anime1-desktop-test.json  anime1-desktop-testing.json  anime1-desktop-testing.py
src/: __init__.py  _version.py  app.py  config.py  desktop.py  main.js  main.js.bak  main.js.full  (+2 more)
(+312 files in other folders)
