[project]
name = "anime1-desktop"
version = "0.1.0"
description = "Anime1 桌面应用 - 番剧浏览器"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pywebview==5.0",
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
    "hanziconv>=0.3.2",
    "peewee>=3.17.0",
    "m3u8>=3.0.0",
    # Sub-dependencies for PyInstaller bundling
    "jinja2>=3.1.0",
    "markupsafe>=2.1.0",
    "werkzeug>=3.0.0",
    "urllib3>=2.0.0",
    "certifi>=2023.0.0",
    "soupsieve>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
# macOS 专有依赖
macos = [
    "pyobjc-framework-WebKit>=9.0",
]

[project.scripts]
anime1 = "src.app:main"

[tool.setuptools]
packages = {find = {}}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests - fast tests that don't require external services",
    "integration: Integration tests - tests that require database or external services",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]
